fix: button size for Ionic v4-beta.19

--- a/src/app/pages/browse/items/items/items.page.scss
+++ b/src/app/pages/browse/items/items/items.page.scss
@@ -39,6 +39,18 @@
   }
 }
 
+#actions-buttons {
+  ion-fab-button {
+    &:not(first-of-type) {
+      margin-left: 8px;
+    }
+
+    &:not(last-of-type) {
+      margin-right: 8px;
+    }
+  }
+}
+
 #review-buttons-flex {
   display: flex;
 
