--- a/src/app/pages/browse/items/item-details/item-details.page.html
+++ b/src/app/pages/browse/items/item-details/item-details.page.html
@@ -34,8 +34,8 @@
   <app-item-details-content [item]="item" [applicant]="applicant" [itemUser]="itemUser" [isAdDisplay]="false" [displaySensitive]="displaySensitive" [noAppointmentAction]="!isAppointmentActionAllowed()" [displayChat]="!hideChat" (performAction)="navigateToAppointment()"></app-item-details-content>
 </ion-content>
 
-<ion-footer role="browse" [class.display]="displayButtons">
-  <ion-toolbar role="buttons" *ngIf="item != null && isAppointmentActionAllowed() && displayButtons" padding-start padding-end>
+<ion-footer role="browse" [class.display]="displayButtons" [class.hidden]="!displayActionButtons()">
+  <ion-toolbar role="buttons" padding-start padding-end>
     <ion-button expand="full" shape="round" (click)="navigateToAppointment()" [disabled]="actionInProgress">
       {{'ITEM_APPOINTMENTS.VIEWING_REQUEST_TITLE' | translate}}
       <ion-icon slot="end" name="send"></ion-icon>
