fix: indicator color on Android

--- a/src/theme/toolbar.scss
+++ b/src/theme/toolbar.scss
@@ -84,6 +84,7 @@ ion-footer[role="browse"], ion-content[role="browse"], ion-footer[role="ad"], io
                     opacity: 1.0;
                     --border-width: 0;
 
+
                     ion-label {
                         font-size: $fluster-text-small;
                         text-overflow: ellipsis;
@@ -97,6 +98,11 @@ ion-footer[role="browse"], ion-content[role="browse"], ion-footer[role="ad"], io
                         --ion-toolbar-color-checked: white;
                     }
                 }
+            }
+
+            &[class*="sc-ion-segment-md"] > .segment-button-checked, &[class*="sc-ion-segment-md"]:not(.ion-color) > .segment-button-checked {
+                --indicator-color-checked: #{$fluster-peach3};
+                --indicator-color: inherit;
             }
 
             &.ion-segment-four-buttons {
