lib: update web-social-share v4

--- a/src/app/components/core/web-social-share/web-social-share.scss
+++ b/src/app/components/core/web-social-share/web-social-share.scss
@@ -1,3 +1,8 @@
+web-social-share div.web-social-share.web-social-share-open div.web-social-share-backdrop,
+web-social-share div.web-social-share.web-social-share-open div.web-social-share-action-sheet {
+    z-index: 99;
+}
+
 div.web-social-share div.web-social-share-action-sheet div.web-social-share-action-sheet-container {
     div.web-social-share-action-sheet-group {
         justify-content: left;
