fix: ios glitch when changing view

--- a/src/app/components/items/item-details/item-details-content/item-details-content.scss
+++ b/src/app/components/items/item-details/item-details-content/item-details-content.scss
@@ -163,7 +163,7 @@ ion-icon {
     padding-top: 0;
 }
 
-#item-details-who {
+#item-details-who, #item-details-neighborhood, #item-details-specs {
     min-height: 532px;
 }
 
