feat: improve toolbar spacing

--- a/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.html
+++ b/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.html
@@ -32,7 +32,7 @@
     </ion-list>
 </div>
 
-<div text-center padding class="date-picker-actions">
+<div text-center padding margin-bottom class="date-picker-actions">
     <ion-button expand="full" shape="round" (click)="selectAppointment()" id="confirmSelection">
         {{'APPLICANT_SELECTION.CONFIRM' | translate}}
         <ion-icon slot="end" name="checkmark"></ion-icon>
