--- a/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.html
+++ b/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.html
@@ -58,7 +58,7 @@
     </ion-list>
 </div>
 
-<div text-center padding class="date-picker-actions">
+<div text-center padding margin-bottom class="date-picker-actions">
     <ion-button expand="full" shape="round" (click)="selectAppointments()" id="confirm-selection">
         {{'ITEM_APPOINTMENTS.SEND' | translate}}
         <ion-icon slot="end" name="send"></ion-icon>
